# aurochs-recall

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.githooks/: README.md  _scan_engine.py  pii-rules-generic.txt  pii-rules.example  pre-commit  pre-commit-pii  pre-commit-secrets  secret-rules.txt
.github/workflows/: release.yml  test.yml
aurochs_recall/: __init__.py
aurochs_recall/cli/: __init__.py  main.py
aurochs_recall/core/: __init__.py  db.py  extraction.py  index.py  locks.py  recovery.py  schema.py  search.py  sources_config.py  validation.py
aurochs_recall/core/graph/: __init__.py  linker.py  store.py
aurochs_recall/core/ingest/: __init__.py  _base.py  claude_ai.py  markdown.py
aurochs_recall/core/migrations/: 0001_initial.sql  0002_t1_extraction.sql  runner.py
aurochs_recall/core/retriever/: __init__.py  _base.py  cross_encoder.py  fts5.py
aurochs_recall/mcp/: __init__.py  server.py
bench/: README.md  __init__.py  run.py
bench/datasets/: README.md  __init__.py  synthetic_chat.jsonl  synthetic_chat_queries.jsonl
bench/safety/: README.md
bench/scripts/: __init__.py  generate_synthetic.py
bench/tests/: __init__.py  test_bench_synthetic.py
cli/: __init__.py  main.py
commands/: aurochs-recall.md  recall-forget.md  recall-status.md  recall.md
core/: index.py  locks.py  recovery.py  search.py  types.py
core/graph/: linker.py  store.py
core/ingest/: claude_ai.py  claude_code.py
core/migrations/: 0001_initial.sql  __init__.py  runner.py
core/retriever/: __init__.py  _base.py  fts5.py
docs/: backup-restore.md  byok.md  cli.md  comparison.md  concepts.md  concurrency.md  contracts.md  empirical-receipts.md  failure-modes.md  faq.md  index.md  install.md  migrations.md  privacy.md  sources.md
docs/assets/: aurochs-brand.css
tests/: conftest.py
tests/fixtures/ingest/claude_ai_export/: conversations.json
tests/fixtures/ingest/claude_code_flat/: 0d34a01e-aaaa-bbbb-cccc-dddddddddddd.jsonl  7d3e2a1b-6c4f-4d5e-9a8b-1f2c3d4e5f60.jsonl  badd1ad0-bad0-4bad-bad0-baddd1ad1ad0.jsonl
tests/fixtures/ingest/claude_code_nested/3a8f5c1e-9b2d-4a7e-b6f1-2c5d8e9a0b3c/: main.jsonl
tests/fixtures/ingest/claude_code_nested/3a8f5c1e-9b2d-4a7e-b6f1-2c5d8e9a0b3c/subagents/: agent-a001.jsonl
tests/fixtures/ingest/markdown_corpus/memory/: session-b.md
tests/fixtures/ingest/markdown_corpus/wiki/: bom-test.md  concept-a.md  long-file.md
tests/fixtures/search/: build_fixture.py
tests/integration/: test_end_to_end.py
tests/unit/: test_cli.py  test_cli_forget.py  test_cli_status.py  test_cross_encoder.py  test_extraction.py  test_graph.py  test_index.py  test_ingest_claude_ai.py  test_ingest_claude_code.py  test_ingest_markdown.py  test_locks.py  test_mcp_server.py  test_retriever_fts5.py  test_run_index.py  test_schema.py  test_search.py  test_types.py  test_validation.py  test_validation_risk_score.py
