[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "aurochs-recall"
version = "0.1.0"
description = "Memory architecture for your AI conversations."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Stefan Kovalik", email = "stefan@aurochs.agency" },
]
maintainers = [
    { name = "Stefan Kovalik", email = "stefan@aurochs.agency" },
]
keywords = [
    "memory",
    "retrieval",
    "claude",
    "chatgpt",
    "bm25",
    "sqlite",
    "knowledge-graph",
    "mcp",
    "claude-code-plugin",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Utilities",
]
dependencies = [
    "psutil>=5.9",
    "platformdirs>=4.0",
    "chardet>=5.0",
]

[project.optional-dependencies]
chroma = [
    "chromadb>=0.5",
]
embeddings = [
    "sentence-transformers>=2.7",
    "torch>=2.2",
]
graph = [
    "kuzu>=0.4",
]
rerank-llm = [
    "anthropic>=0.34",
    "openai>=1.40",
]
multilingual = [
    "sentence-transformers>=2.7",
    "torch>=2.2",
    # BGE-M3 embedding + multilingual MiniLM cross-encoder are model downloads,
    # but they require sentence-transformers as the runtime.
]
mcp = [
    "mcp>=0.9",
]
backup = [
    "zstandard>=0.22",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-psutil",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocs-glightbox>=0.4",
    "pymdown-extensions>=10.8",
]
all = [
    "aurochs-recall[chroma,embeddings,graph,rerank-llm,multilingual,mcp,backup]",
]

[project.scripts]
recall = "aurochs_recall.cli.main:main"

[project.urls]
Homepage = "https://github.com/skovalik/aurochs-recall"
Repository = "https://github.com/skovalik/aurochs-recall"
Documentation = "https://github.com/skovalik/aurochs-recall#readme"
Issues = "https://github.com/skovalik/aurochs-recall/issues"
Changelog = "https://github.com/skovalik/aurochs-recall/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["aurochs_recall"]

[tool.hatch.build.targets.sdist]
include = [
    "/aurochs_recall",
    "/docs",
    "/bench",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
exclude = [
    "/recall.db*",
    "/personal",
    "/recall-personal",
    "/.pii-rules.local",
]

# ---- ruff -------------------------------------------------------------------

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [
    "build",
    "dist",
    ".venv",
    "venv",
    "personal",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length (handled by formatter)
    "N802",  # function names — sqlite/FTS lowercase tokens conflict with PEP 8
    "B008",  # function call in default argument (intentional for typer-style CLI)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N806", "N803"]
"aurochs_recall/core/migrations/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ---- mypy -------------------------------------------------------------------

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = [
    "build/",
    "dist/",
    "tests/fixtures/",
    "personal/",
]

[[tool.mypy.overrides]]
module = [
    "chardet.*",
    "psutil.*",
    "platformdirs.*",
    "kuzu.*",
    "chromadb.*",
    "sentence_transformers.*",
    "mcp.*",
    "zstandard.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ---- pytest -----------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
]
markers = [
    "unit: unit tests, no I/O",
    "integration: integration tests with sqlite",
    "slow: tests that take >1s",
    "windows: windows-specific tests",
    "macos: macos-specific tests",
    "linux: linux-specific tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pkg_resources.*",
]

# ---- coverage ---------------------------------------------------------------

[tool.coverage.run]
branch = true
source = ["aurochs_recall"]
omit = [
    "*/tests/*",
    "*/migrations/versions/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false
